# setupranali.github.io

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  NOTICE  ONBOARDING.md  PERFORMANCE.md  PRODUCTION_READINESS.md  README.md  ROADMAP.md  SECURITY.md  catalog.yaml  docker-compose.yml  env.example  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  feedback.md
.github/workflows/: ci.yml  docs.yml  metabase-driver.yml  release.yml
ARCHITECTURE/: index.html
PROCESS_FLOW/: index.html
api-reference/: index.html
api-reference/advanced/: index.html
api-reference/authentication/: index.html
api-reference/graphql/: index.html
api-reference/introspection/: index.html
api-reference/nlq/: index.html
api-reference/odata/: index.html
api-reference/query/: index.html
api-reference/sources/: index.html
api-reference/sql/: index.html
app/: advanced_features.py  advanced_routes.py  ai_features.py  batch.py  cache.py  catalog.py  connection_manager.py  crypto.py  errors.py  graphql_api.py  guards.py  jsonapi.py  main.py  nlq.py  oauth.py  observability.py  odata.py  permissions.py  query_engine.py  rate_limit.py  rls.py  saml.py  security.py  sources.py  streaming.py
app/adapters/: __init__.py  bigquery_adapter.py  clickhouse_adapter.py  cockroachdb_adapter.py  databricks_adapter.py  duckdb_adapter.py  factory.py  mysql_adapter.py  oracle_adapter.py  postgres_adapter.py  redshift_adapter.py  (+5 more)
cli/: README.md  __init__.py  setup.py  setupranali_cli.py
concepts/: index.html
config/: __init__.py  development.yaml  production.yaml  testing.yaml
deployment/: index.html
docs/: ARCHITECTURE.md  PROCESS_FLOW.md  index.md  releases.md
examples/: README.md  index.html
getting-started/: index.html
guides/: index.html
integrations/: index.html
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  redis.yaml  secret.yaml  service.yaml
overrides/: main.html
scripts/: README.md  setup.sh  start.sh  test_integration.py  verify_checklist.sh
sdks/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_health.py
webui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+361 files in other folders)
